1.3 - TBD
    * Fixed a problem causing render progress to reset after loading a scene
    * Clouds can now be moved in all directions
    * HDRI sky textures can now be used, supported formats are:
        + RGBE (.hdr)
        + PFM
    * Added new sky rendering modes:
        + gradient
	+ spherical skymap
	+ skybox
    * Added sky light parameter, affecting indirect sky lighting contribution
    * The simulated sky has been modified (less pink, more bright)
    * Enable "Clear Selection" button after selecting region
    * Fixed regular glass blocks not letting light pass through (since 1.2.0).
      This could also affect other transparent blocks where the transparent
      texels had dark RGB values.

1.2.3 - 2014-07-13
    * Added Minecraft 1.8 blocks:
        + Coarse Dirt
        + Prismarine (rough, block, dark)
        + Sea Lantern
        + Wet Sponge
        + Iron Trapdoor
        + Slime Block
    * Improved the 2D map:
        + More zoom levels
        + Mouse wheel scrolling zooms, Ctrl+Scroll changes layer
        + Fixed tearing issues
        + Improved performance for large map views
        + The name of the biome under the cursor is now displayed in lower-left
          corner of the map
        + Improved the rendering of many blocks in the block-layer mode
    * Right-clicking in the 2D map now opens a context menu with options to
      cre ate a new scene, load a scene, or clear the current selection
    * (potentially) Fixed issue causing the render preview window to display
      white after being closed and re-opened
    * Using the -snapshot command without arguments now prints a list of all
      available scenes in the scene directory
    * Using the -snapshot command without a destination PNG file name now
      automatically picks a filename based on the scene name and current SPP
    * Depth of field now only uses one scene variable (removed infDof variable)
    * Fixed corner Acacia/Dark Oak stairs rendering issue